4.0.13
 * Add new concurrent_merkle_tree_requests config property to prevent OOM during multi-range and/or multi-table repairs (CASSANDRA-19336)
Merged from 3.11:
Merged from 3.0:
 * Backport CASSANDRA-16418 to 3.x (CASSANDRA-18824)


4.0.12
 * Skip version check if an endpoint is dead state in Gossiper#upgradeFromVersionSupplier (CASSANDRA-19187)
 * Fix Gossiper::hasMajorVersion3Nodes to return false during minor upgrade (CASSANDRA-18999)
 * Revert unnecessary read lock acquisition when reading ring version in TokenMetadata introduced in CASSANDRA-16286 (CASSANDRA-19107)
 * Support max SSTable size in sorted CQLSSTableWriter (CASSANDRA-18941)
 * Fix nodetool repair_admin summarize-pending command to not throw exception (CASSANDRA-19014)
 * Fix cassandra-stress in simplenative mode with prepared statements (CASSANDRA-18744)
 * Fix filtering system ks sstables for relocation on startup (CASSANDRA-18963)
 * Remove completed coordinator sessions (CASSANDRA-18903)
 * Make StartupConnectivityChecker only run a connectivity check if there are no nodes which are running a version prior to Cassandra 4 (CASSANDRA-18968)
 * Retrieve keyspaces metadata and schema version concistently in DescribeStatement (CASSANDRA-18921)
 * Gossip NPE due to shutdown event corrupting empty statuses (CASSANDRA-18913)
 * Synchronize CQLSSTableWriter#build on the Schema.instance object (CASSANDRA-18317)
 * Fix closing iterator in SecondaryIndexBuilder (CASSANDRA-18361)
 * Update hdrhistogram to 2.1.12 (CASSANDRA-18893)
 * Improve performance of compactions when table does not have an index (CASSANDRA-18773)
 * JMH improvements - faster build and async profiler (CASSANDRA-18871)
 * Enable 3rd party JDK installations for Debian package (CASSANDRA-18844)
 * Fix NTS log message when an unrecognized strategy option is passed (CASSANDRA-18679)
 * Fix BulkLoader ignoring cipher suites options (CASSANDRA-18582)
 * Migrate Python optparse to argparse (CASSANDRA-17914)
Merged from 3.11: